<resources>
    <string name="app_name">ParcialKotlinApp</string>
    <string name="required_name">Ingrese el nombre</string>
    <string name="required_surname">Ingrese el apellido</string>
    <string name="required_email">Ingrese el correo</string>
    <string name="required_password">Ingrese la contraseña</string>
    <string name="required_university">Ingrese la universidad</string>
    <string name="invalid_email">Correo no válido</string>
    <string name="password_min_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="required_birth_date">Seleccione una fecha de nacimiento válida</string>
    <string name="required_semester">Seleccione un semestre entre 1 y 10</string>
    <string name="select_semester">Seleccione un semestre</string>
    <string name="registering">Registrando usuario...</string>
    <string name="logging_in">Validando usuario...</string>
    <string name="registration_success">Registro exitoso</string>
    <string name="registration_success_message">El usuario fue creado exitosamente.</string>
    <string name="accept">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="exit">SALIR</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_confirmation">¿Está seguro de que desea cerrar sesión?</string>
    <string name="connection_error">No se pudo conectar con el servidor. Intente nuevamente.</string>
    <string name="invalid_login_response">No se recibieron los datos de su cuenta. Intente iniciar sesión nuevamente.</string>
    <string name="error_bad_request">Revise los datos ingresados.</string>
    <string name="error_unauthorized">Correo o contraseña incorrectos.</string>
    <string name="error_not_found">No se encontró la información solicitada.</string>
    <string name="error_conflict">Los datos ingresados ya se encuentran registrados.</string>
    <string name="error_server">El servicio no está disponible en este momento. Intente más tarde.</string>
    <string name="error_request">No se pudo completar la solicitud. Intente nuevamente.</string>
    <string name="greeting_morning">Buenos días, %1$s</string>
    <string name="greeting_afternoon">Buenas tardes, %1$s</string>
    <string name="greeting_evening">Buenas noches, %1$s</string>
    <string name="required_number">Ingrese un número</string>
    <string name="invalid_number">Ingrese un número entero válido</string>
    <string name="result_even">%1$d es PAR</string>
    <string name="result_odd">%1$d es IMPAR</string>
    <string name="back">Regresar</string>
    <string name="logo_description">Logo UCompensar</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="login_description">Ingresa tu correo y contraseña para acceder a tu cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">INGRESAR</string>
    <string name="create_account">CREAR CUENTA</string>
    <string name="register_title">Registro de usuario</string>
    <string name="register_description">Completa tus datos para crear tu cuenta</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="select_birth_date">Seleccionar fecha de nacimiento</string>
    <string name="university">Universidad</string>
    <string name="semester">Semestre</string>
    <string name="register">REGISTRAR</string>
    <string name="parity_exercise">Ejercicio Par o Impar</string>
    <string name="parity_title">Validar número Par o Impar</string>
    <string name="validate">VALIDAR</string>
    <string name="result">Resultado</string>
    <string name="calculated_age">Edad: %1$d años, %2$d meses, %3$d días y %4$d horas</string>
</resources>
